--- a/wordpress/wp-content/themes/twentyseventeen/assets/css/dashboard-template.css
+++ b/wordpress/wp-content/themes/twentyseventeen/assets/css/dashboard-template.css
@@ -22,7 +22,7 @@ ul {
     background-color: white;
     border-right: 2px solid #555;
     position: absolute;
-    height: 100%;
+    height: 520px;
     overflow: auto;
 }
 
@@ -41,7 +41,4 @@ li a.active {
 li a:hover:not(.active) {
     background-color: #c0c0c0;
     color: #e2e2e0;
-}
-.component{
-	
 }
