--- a/wordpress/wp-content/themes/twentyseventeen/assets/css/style.css
+++ b/wordpress/wp-content/themes/twentyseventeen/assets/css/style.css
@@ -50,3 +50,35 @@
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
 }
+
+/*For operator case page START*/
+#listOfCaseSideMenu {
+    list-style-type: none;
+    width: 16%;
+	margin-left:10%;
+    background-color: white;
+    position: absolute;
+    height: 520px;
+}
+#listOfCaseSideMenu li{
+	border-bottom: 1px solid #555;
+}
+
+#listOfCaseSideMenu a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+	cursor:pointer;
+}
+
+#listOfCaseSideMenu a.active {
+    background-color: #737373;
+    color: white;
+}
+
+#listOfCaseSideMenu a:hover:not(.active) {
+    background-color: #c0c0c0;
+    color: #e2e2e0;
+}
+/*For operator case page END*/
