fixed event details updates bug added check to display delete and save button for manager role only addded event details delete confirmation

--- a/wordpress/wp-content/themes/twentyseventeen/assets/css/dashboard-template.css
+++ b/wordpress/wp-content/themes/twentyseventeen/assets/css/dashboard-template.css
@@ -22,8 +22,14 @@ ul {
     background-color: white;
     border-right: 2px solid #555;
     position: absolute;
-    height: 520px;
+    height: 100%;
     overflow: auto;
+}
+#editEventDetails{
+	height:300dp;
+}
+.right{
+	float:right;
 }
 
 li a {
