--- a/wordpress/wp-content/themes/twentyseventeen/assets/css/style.css
+++ b/wordpress/wp-content/themes/twentyseventeen/assets/css/style.css
@@ -52,32 +52,61 @@
 }
 
 /*For operator case page START*/
-#listOfCaseSideMenu {
-    list-style-type: none;
-    width: 16%;
+
+#listOfCaseContainer{
+	
+	height: 520px;
+	width: 225px;
 	margin-left:10%;
     background-color: white;
     position: absolute;
-    height: 520px;
-}
-#listOfCaseSideMenu li{
-	border-bottom: 1px solid #555;
+	overflow: auto;
+	word-break: break-all;
+	
 }
 
-#listOfCaseSideMenu a {
+.card {
+	width: 200px;
+	margin:5px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+	width: 200px !important;
+	padding: 2px 15px;
+}
+
+#listOfCaseContainer h5{
+
+    font-size: 16px;
+    font-weight: 400;
+    padding: 10px;
+    background-color: #48b5e9;
+    color: white;
+    margin: 0;
+    border-radius: 2px 2px 0 0;
+
+}
+	
+#listOfCaseContainer a {
+	width: 200px;
     display: block;
     color: #000;
-    padding: 8px 16px;
     text-decoration: none;
 	cursor:pointer;
 }
 
-#listOfCaseSideMenu a.active {
+#listOfCaseContainer a.active {
     background-color: #737373;
     color: white;
 }
 
-#listOfCaseSideMenu a:hover:not(.active) {
+#listOfCaseContainer a:hover:not(.active) {
     background-color: #c0c0c0;
     color: #e2e2e0;
 }
