--- a/wordpress/wp-content/themes/twentyseventeen/assets/css/dashboard-template.css
+++ b/wordpress/wp-content/themes/twentyseventeen/assets/css/dashboard-template.css
@@ -14,6 +14,7 @@
 	height: 85%;
 	padding:0px 10px;
 }
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -22,7 +23,7 @@ ul {
     background-color: white;
     border-right: 2px solid #555;
     position: absolute;
-    height: 100%;
+    height: 505px;
     overflow: auto;
 }
 #editEventDetails{
